--- a/docs/3.0rc/develop/write-flows.mdx
+++ b/docs/3.0rc/develop/write-flows.mdx
@@ -285,7 +285,7 @@ As shown in the examples above, flows run synchronously by default.
 
 ### Asynchronous functions
 
-Prefect also supports asynchronous exocution. 
+Prefect also supports asynchronous execution. 
 The resulting flows are coroutines that can be awaited or run concurrently, following [the standard rules of async Python](https://docs.python.org/3/library/asyncio-task.html).
 For example:
 
