--- a/docs/3.0rc/develop/write-flows.mdx
+++ b/docs/3.0rc/develop/write-flows.mdx
@@ -426,7 +426,7 @@ list(generator) # prints 'Generator consumed!'
 
 ## Flow runs
 
-A _flow run_ represents a single execution of a flow.
+A _flow run_ is a single execution of a flow.
 
 In adddition to create a flow run by calling the flow manually, you can create a flow run by using an external scheduler such as `cron` to invoke a flow function. 
 More commonly, most users run flows by create a [deployment](/3.0rc/deploy/) on Prefect Cloud or Prefect server and then scheduling a flow run for the deployment through a schedule, the Prefect UI, or the Prefect API.
