--- a/docs/3.0rc/develop/write-flows.mdx
+++ b/docs/3.0rc/develop/write-flows.mdx
@@ -585,7 +585,7 @@ if __name__ == "__main__":
     always_succeeds_flow()
 ```
 
-Running this flow results in a **Completed** final state because the flow returns the future of the task that succeeds:
+This flow run finishes in a **Completed** final state because the flow returns the future of the task that succeeds:
 
 ```bash
 18:35:24.965 | INFO    | prefect.engine - Created flow run 'whispering-guan' for flow 'always-succeeds-flow'
