--- a/docs/3.0rc/develop/write-flows.mdx
+++ b/docs/3.0rc/develop/write-flows.mdx
@@ -130,7 +130,7 @@ def model_validator(model: Model):
     print(model)
 ```
 
-For example, to automatically convert an arguement to a datetime:
+For example, to automatically convert an argument to a datetime:
 
 ```python
 from prefect import flow
