--- a/docs/3.0rc/develop/write-flows.mdx
+++ b/docs/3.0rc/develop/write-flows.mdx
@@ -9,7 +9,7 @@ A flow is a container for workflow logic as code.
 Flows are defined as Python functions. 
 They can take inputs, perform work, and return an output.
 
-Turn any function into a Prefect flow by adding the `@flow` decorator to it:
+Make any function a Prefect flow by adding the `@flow` decorator to it:
 
 ```python
 from prefect import flow
