--- a/docs/3.0rc/develop/write-flows.mdx
+++ b/docs/3.0rc/develop/write-flows.mdx
@@ -46,7 +46,7 @@ If you don't provide a name, Prefect uses the flow function name.
 
 A _flow run_ is a single execution of a flow.
 
-Create a flow run by calling a flow by its function name, just as you would a normal Python function in a script.
+Create a flow run by calling a flow by its function name, just as you would a normal Python function.
 
 You can also create a flow run by:
 
