--- a/docs/3.0rc/develop/write-flows.mdx
+++ b/docs/3.0rc/develop/write-flows.mdx
@@ -714,4 +714,4 @@ Check out [Transactions](/3.0rc/develop/transactions/) to make your flows even m
 ## See also
 
 - Store and reuse non-sensitive bits of data, such as configuration information, by using [variables](/3.0rc/develop/variables).
-- Make your flow more manageable, performant, and observable by breaking it down into discrete units of orchestrated work with [tasks](/3.0rc/develop/write-tasks/).
+- Make your flow more manageable, performant, and observable by breaking it into discrete units of orchestrated work with [tasks](/3.0rc/develop/write-tasks/).
