upate docker image name for 3rc

--- a/docs/3.0rc/deploy/infrastructure-examples/kubernetes.mdx
+++ b/docs/3.0rc/deploy/infrastructure-examples/kubernetes.mdx
@@ -220,7 +220,7 @@ to **default**.
 **Image**
 
 Specify the Docker container image for created jobs.
-If not set, the latest Prefect 3 image is used (for example, `prefecthq/prefect:3-latest`).
+If not set, the latest Prefect 3 image is used (for example, `prefecthq/prefect:3rc-latest`).
 You can override this on each deployment through `job_variables`.
 
 **Image Pull Policy**
