--- a/docs/integrations/prefect-aws/ecs_guide.mdx
+++ b/docs/integrations/prefect-aws/ecs_guide.mdx
@@ -191,7 +191,7 @@ Next, create an ECS task definition that specifies the Docker image for the Pref
     "containerDefinitions": [
         {
             "name": "prefect-worker",
-            "image": "prefecthq/prefect:3-latest",
+            "image": "prefecthq/prefect:3rc-latest",
             "cpu": 512,
             "memory": 1024,
             "essential": true,
