--- a/docs/3.0rc/deploy/infrastructure-examples/managed.mdx
+++ b/docs/3.0rc/deploy/infrastructure-examples/managed.mdx
@@ -83,7 +83,7 @@ Pro tier and above accounts are limited to:
 
 ### Images
 
-Managed execution requires that you run the official Prefect Docker image: `prefecthq/prefect:3-latest`. 
+Managed execution requires that you run the official Prefect Docker image: `prefecthq/prefect:3rc-latest`. 
 However, as noted above, you can install Python package dependencies at runtime. 
 If you need to use your own image, we recommend using another type of work pool.
 
