--- a/docs/3.0rc/develop/task-runners.mdx
+++ b/docs/3.0rc/develop/task-runners.mdx
@@ -287,6 +287,25 @@ resulting_sum = sum_it([1, 2, 3], 5)
 assert resulting_sum == [6, 7, 8]
 ```
 
+<Tip>
+**Get the results from a list of mapped futures**
+
+When using `.map` as in the above example, the result of the task is a list of futures. 
+You can wait for or retrieve the results from these futures with `wait` or `result` methods:
+
+```python
+futures = some_task.map(some_iterable)
+results = futures.result()
+```
+which is shorthand for:
+
+```python
+futures = some_task.map(some_iterable)
+results = [future.result() for future in futures]
+```
+</Tip>
+
+
 If your static argument is an iterable, wrap it with `unmapped` to tell Prefect to treat it 
 as a static value.
 
