--- a/docs/3.0rc/resources/upgrade-prefect-3.mdx
+++ b/docs/3.0rc/resources/upgrade-prefect-3.mdx
@@ -17,7 +17,7 @@ All previous and future Prefect 2 releases will continue to work with Prefect Cl
 </Info>
 
 ## Client Side Task Orchestration
-Prefect 3 introduces client-side task run orchestration as the default. Task creation and state updates now happen locally, dramatically reducing API calls to the Prefect server during execution. This change brings a <b>10x performance improvement for task executions</b> many scenarios. 
+Prefect 3 introduces client-side task run orchestration as the default. Task creation and state updates now happen locally, dramatically reducing API calls to the Prefect server during execution. This change brings a <b>10x performance improvement for task executions</b> in many scenarios. 
 
 The reduced server dependency also means your workflows are more resilient to network issues or server load, continuing to run even if there's a temporary loss of connection to the Prefect server.
 
