--- a/docs/3.0rc/resources/upgrade-prefect-3.mdx
+++ b/docs/3.0rc/resources/upgrade-prefect-3.mdx
@@ -23,7 +23,7 @@ The reduced server dependency also means your workflows are more resilient to ne
 
 Task updates are now logged in batch, greatly improving efficiency and enabling Prefect 3 to handle much larger and more complex workflows. You can create and run workflows with thousands of tasks efficiently, supporting large-scale data processing and complex orchestration scenarios. 
 
-State changes and logs in the Prefect UI are now eventually consistent model for task states, this trade-off enables the substantial performance gains and increased workflow scale that Prefect 3 delivers.
+State changes and logs in the Prefect UI are now eventually consistent, this trade-off enables the substantial performance gains and increased workflow scale that Prefect 3 delivers.
 
 ## Module location and name changes
 
