--- a/docs/3.0rc/resources/upgrading-to-prefect-3.mdx
+++ b/docs/3.0rc/resources/upgrading-to-prefect-3.mdx
@@ -32,7 +32,7 @@ pip install prefect[aws]>=3.0.0rc1 --pre
 
 ### Pydantic V2
 
-<info>
+<Info>
 This change affects you if: You use custom Pydantic models with Prefect features.
 </info>
 
