--- a/docs/3.0rc/resources/upgrading-to-prefect-3.mdx
+++ b/docs/3.0rc/resources/upgrading-to-prefect-3.mdx
@@ -5,7 +5,7 @@ description: Learn how to upgrade from Prefect 2 to Prefect 3.
 
 Prefect 3 introduces exciting new features and improvements while maintaining compatibility with most Prefect 2 workflows. For the majority of users, upgrading to Prefect 3 will be a seamless process that requires few or no code changes. This guide highlights key changes that you may need to consider when upgrading.
 
-## Quick Start
+## Quickstart
 
 To upgrade to Prefect 3, run:
 
