--- a/docs/3.0rc/resources/upgrading-to-prefect-3.mdx
+++ b/docs/3.0rc/resources/upgrading-to-prefect-3.mdx
@@ -28,7 +28,7 @@ If you use a Prefect integration or extra, remember to upgrade it as well. For e
 pip install prefect[aws]>=3.0.0rc1 --pre
 ```
 
-## Upgrade Notes
+## Upgrade notes
 
 ### Pydantic V2
 
