--- a/docs/3.0rc/resources/whats-new-prefect-3.mdx
+++ b/docs/3.0rc/resources/whats-new-prefect-3.mdx
@@ -42,5 +42,5 @@ Workers were first introduced in Prefect 2 as next-generation agents, and are no
 
 ## Performance Enhancements
 
-Prefect 3 doesn't just bring new features; it also delivers significant performance improvements. Users running massively parallel workflows on distributed systems like Dask and Ray will notice substantial speedups. In some benchmark cases, we've observed up to a 98% reduction in runtime overhead. These performance gains translate directly into faster execution times and more efficient resource utilization for your data pipelines.
+Prefect 3 doesn't just bring new features; it also delivers significant performance improvements. Users running massively parallel workflows on distributed systems such as Dask and Ray will notice substantial speedups. In some benchmark cases, we've observed up to a 98% reduction in runtime overhead. These performance gains translate directly into faster execution times and more efficient resource utilization for your data pipelines.
 
