--- a/docs/3.0rc/resources/whats-new-prefect-3.mdx
+++ b/docs/3.0rc/resources/whats-new-prefect-3.mdx
@@ -40,7 +40,7 @@ The variables system has also been upgraded to support arbitrary JSON, not just 
 
 Workers were first introduced in Prefect 2 as next-generation agents, and are now standard in Prefect 3. Workers offer a stronger governance model for infrastructure, improved monitoring of jobs and work pool/queue health, and more flexibility in choosing compute layers, resulting in a more robust and scalable solution for managing the execution of your workflows across various environments.
 
-## Performance Enhancements
+## Performance enhancements
 
 Prefect 3 doesn't just bring new features; it also delivers significant performance improvements. Users running massively parallel workflows on distributed systems such as Dask and Ray will notice substantial speedups. In some benchmark cases, we've observed up to a 98% reduction in runtime overhead. These performance gains translate directly into faster execution times and more efficient resource utilization for your data pipelines.
 
