--- a/docs/3.0rc/resources/whats-new-prefect-3.mdx
+++ b/docs/3.0rc/resources/whats-new-prefect-3.mdx
@@ -30,7 +30,7 @@ Prefect 3 comes with a thoroughly reworked client-side engine that brings severa
 
 One of the most significant changes is that all code now runs on the main thread by default. This change improves performance and leads to more intuitive behavior, especially when dealing with shared resources or non-thread-safe operations.
 
-## Improved Artifacts and Variables
+## Improved artifacts and variables
 
 Prefect 3 enhances the artifacts system with new types, including progress bars and image artifacts. These additions allow for richer, more informative task outputs, improving the observability of your workflows.
 
