--- a/docs/3.0rc/resources/whats-new-prefect-3.mdx
+++ b/docs/3.0rc/resources/whats-new-prefect-3.mdx
@@ -24,7 +24,7 @@ For example, you can define rollback behaviors for your tasks, ensuring that any
 Prefect 3 has no restrictions on where tasks can run. Tasks can be nested within other tasks, allowing for more flexible and modular workflows; they can also be called outside of flows, essentially enabling Prefect to function as a background task service. You can now run tasks autonomously, apply them asynchronously, or delay their execution as needed. This flexibility opens up new possibilities for task management and execution strategies in your data pipelines.
 
 
-## Enhanced Client-Side Engine
+## Enhanced client-side engine
 
 Prefect 3 comes with a thoroughly reworked client-side engine that brings several improvements to the table. You can now nest tasks within other tasks, adding a new level of modularity to your workflows. The engine also supports generator tasks, allowing for more flexible and efficient handling of iterative processes.
 
