--- a/docs/3.0rc/resources/upgrading-to-prefect-3.mdx
+++ b/docs/3.0rc/resources/upgrading-to-prefect-3.mdx
@@ -40,7 +40,7 @@ Prefect 3 is built with Pydantic 2 for improved performance. All Prefect objects
 
 Refer to [Pydantic's migration guide](https://docs.pydantic.dev/latest/migration/) for detailed information on necessary changes.
 
-### Module Location and Name Changes
+### Module location and name changes
 
 Some less-commonly used modules have been renamed, reorganized, or removed for clarity. The old import paths will continue to be supported for 6 months, but emit deprecation warnings. You can look at the [deprecation code](https://github.com/PrefectHQ/prefect/blob/main/src/prefect/_internal/compatibility/migration.py) to see a full list of affected paths.
 
