--- a/docs/3.0rc/resources/upgrading-to-prefect-3.mdx
+++ b/docs/3.0rc/resources/upgrading-to-prefect-3.mdx
@@ -44,7 +44,7 @@ Refer to [Pydantic's migration guide](https://docs.pydantic.dev/latest/migration
 
 Some less-commonly used modules have been renamed, reorganized, or removed for clarity. The old import paths will continue to be supported for 6 months, but emit deprecation warnings. You can look at the [deprecation code](https://github.com/PrefectHQ/prefect/blob/main/src/prefect/_internal/compatibility/migration.py) to see a full list of affected paths.
 
-### Async Behavior
+### Async behavior
 
 <info>
 This change affects you if: you use advanced asynchronous behaviors in your flows.
