Apply suggestions from code review
Co-authored-by: Jeff Hale <discdiver@users.noreply.github.com>

--- a/docs/3.0rc/resources/whats-new-prefect-3.mdx
+++ b/docs/3.0rc/resources/whats-new-prefect-3.mdx
@@ -1,13 +1,13 @@
 ---
-title: What's New in Prefect 3
-sidebarTitle: What's New
+title: What's new in Prefect 3
+sidebarTitle: What's new
 ---
 
 Prefect 3 represents a significant leap forward in workflow orchestration, bringing a host of new features, performance improvements, and expanded capabilities to enhance your data engineering experience. Let's explore the exciting new additions and enhancements in this release.
 
-Most Prefect 2 users can upgrade without changes to their existing workflows. Please review the [upgrade guide](/3.0rc/resources/upgrading-to-prefect-3) for more information.
+Most Prefect 2 users can upgrade without changes to their existing workflows. Please review the [upgrade guide](/3.0rc/resources/upgrade-to-prefect-3) for more information.
 
-## Open-Source Events and Automation System
+## Open source events and automation system
 
 One of the most anticipated features in Prefect 3 is the introduction of the events and automation system to the open-source package. Previously exclusive to Prefect Cloud, this powerful system now allows all users to create sophisticated, event-driven workflows. 
 
